<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChinaRecorder</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_fileList">fileList</string>
    <string name="title_activity_record_list">RecordListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_record">录音</string>
    <string name="fix">修改</string>
    <string name="save">保存</string>
    <string name="setting">设置</string>
    <string name="notarize">确认</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="start">开始</string>
    <string name="stop">暂停</string>
    <string name="unlogin">未登录</string>
    <string name="finish">完成</string>
    <string name="detail">详细信息</string>
    <string name="person">个人中心</string>
    <string name="title_activity_record_detail">详细信息</string>
    <string name="title_activity_play">播放</string>
    <string name="hello">ChinaRecorder</string>
    <string name="resetbutton">重播</string>
    <string name="pausebutton">暂停</string>
    <string name="playbutton">播放</string>
    <string name="stopbutton">停止</string>
    <string name="filenotfind">文件没有找到</string>
    <string name="continues">继续</string>
    
    <string name="list_preference_amr">amr</string>
    <string name="list_preference_3ggp">3gpp</string>
    <string name="summary_list_preference">点击以修改录音文件格式</string>
    <string name="dialog_title_list_preferemce">选择录音文件格式</string>
    <string name="title_user_category">用户</string>
    <string name="title_login_preferemce">登录</string>
    <string name="summary_login_preference">点击进行登录</string>
    <string name="title_activity_login">LoginActivity</string>
    
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="status">Status</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    
    <string name="file_synch">文件同步</string>

</resources>
