<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
     tools:context="com.example.chinarecorder.PlayActivity">
	<EditText 
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:id="@+id/filename"
	    />
	<LinearLayout 
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" 
    >
	    <Button
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playbutton" 
            android:onClick="mediaplayer"
            android:id="@+id/playbutton"
	        />
	    <Button
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopbutton" 
            android:onClick="mediaplayer"
            android:id="@+id/stopbutton"
	        />
	    <Button
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetbutton"
            android:onClick="mediaplayer" 
            android:id="@+id/resetbutton"
	        />
	     <Button
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pausebutton" 
            android:onClick="mediaplayer"
            android:id="@+id/pausebutton"
	     />
	</LinearLayout>
	<SeekBar 
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekbar"
	    />
	<TextView
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:id="@+id/currtime" 
	    />
	<ImageView 
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:src="@drawable/cd"
        android:id="@+id/imageview"
       
	 />
	<LinearLayout 
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" 
    	 >
	    <ImageView
	         android:layout_width="wrap_content"
    		 android:layout_height="wrap_content"
    		 android:src="@drawable/music"
	     />
	    <TextView
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
	        android:id="@+id/tex"
	     />
	</LinearLayout>
</LinearLayout>
