<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="top"
    android:orientation="vertical" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chinarecorder.LoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="13dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="16dip" >

        <EditText
            android:id="@+id/username_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dip"
            android:gravity="left|center_vertical"
            android:hint="@string/enter_user_name"
            android:inputType="textEmailAddress"
            android:minWidth="250dip"
            android:paddingBottom="2dip"
            android:paddingLeft="10dip"
            android:paddingRight="2dip"
            android:paddingTop="2dip"
            android:scrollHorizontally="true"
            android:singleLine="true" >

        </EditText>

        <EditText
            android:id="@+id/password_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dip"
            android:gravity="left|center_vertical"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:minWidth="250dip"
            android:paddingBottom="2dip"
            android:paddingLeft="10dip"
            android:paddingRight="2dip"
            android:paddingTop="2dip"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:minHeight="54dip"
        android:orientation="horizontal"
        android:paddingTop="2dip" >

        <Button
            android:id="@+id/sync_login_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:minWidth="100dip"
            android:onClick="handleLogin"
            android:padding="2dip"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/sync_sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="4dip"
            android:layout_weight="1"
            android:minWidth="100dip"
            android:onClick="handleSignUp"
            android:padding="2dip"
            android:text="@string/sign_up" />

    </LinearLayout>

</LinearLayout>
